--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "typescript": "^5.9.2"
+  }
 }
