--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "type": "module",
   "devDependencies": {
-    "@types/node": "^18.19.50",
-    "@types/react": "^18.3.3",
-    "typescript": "^5.5.4"
+    "@types/node": "18.19.50",
+    "@types/react": "18.3.3",
+    "typescript": "5.5.4"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
