--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "ultriva-chat-starter",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "engines": { "node": "22.x" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,13 +15,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
-  "type": "module",
   "devDependencies": {
-    "@types/node": "18.19.50",
+    "typescript": "5.5.4",
     "@types/react": "18.3.3",
-    "typescript": "5.5.4"
-  },
-  "engines": {
-    "node": "18.x"
+    "@types/node": "18.19.50"
   }
 }
